<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="false"
    android:background="@drawable/sandspiral"
    android:backgroundTint="#d6FFFFFF"
    android:backgroundTintMode="src_over"
    tools:context=".WeatherFragment">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".WeatherFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/enter_loc"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weatherInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="#FF000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetLocation" />

        <Button
            android:id="@+id/backToLifestyle"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundedbuttongreen"
            android:text="@string/lifestyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintEnd_toStartOf="@+id/resetLocation"
            app:layout_constraintTop_toBottomOf="@+id/location"
            />

        <Button
            android:id="@+id/resetLocation"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundedbuttonyellow"
            android:text="@string/set_loc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toEndOf="@+id/backToLifestyle"
            app:layout_constraintTop_toBottomOf="@+id/location"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</ScrollView>