...
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/toolbuttonyellow"
                android:text="@string/nearby_hikes" />

            <Button
                android:id="@+id/weather_btn_frag"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/toolbuttongreen"
                android:text="@string/local_weather" />
...
